# MyloWare

./: .coveragerc  .cursorignore  .dockerignore  .env.example  .eslintrc.js  .firebaserc  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  CODING_STANDARDS.md  CONTRIBUTING.md  CURSOR_MCP_SETUP.md  DATABASE_SETUP.md  DEV_GUIDE.md  Dockerfile  Dockerfile.agents  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_SUMMARY.md  MYLOWARE_DIAGNOSTIC.md  Makefile  N8N_JSON_PARSING_FIX.md  N8N_REAL_ISSUE_ANALYSIS.md  NORTH_STAR.md  PLAN-CODEX.md  PLAN-GEMINI.md  PLAN.md  PLANS_INDEX.md  PROMPT_REORGANIZATION_SUMMARY.md  QUICKSTART_RESET.md  QUICK_START.md  README.md  REVIEW-CODEX.md  REVIEW.md  ROADMAP.md  SCRIPTS_CHEATSHEET.md  STRUCTURED_OUTPUT_FIX.md  (+39 more)
.bmad-core/: install-manifest.yaml
.bmad-core/agents/: analyst.md  architect.md  bmad-master.md  bmad-orchestrator.md  dev.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.bmad-infrastructure-devops/: install-manifest.yaml
.devcontainer/: devcontainer.json
.github/: QUICK_START.md  pull_request_template.md
.github/workflows/: cd-prod.yml  cd-staging.yml  cd.yml  ci.yml  docs-check.yml  docs.yml  live-smoke.yml  security.yml  validate-workflows.yml
.husky/: pre-commit
adapters/: README.md
adapters/observability/: __init__.py  logging_filters.py  metrics.py  request_id.py  sentry.py  tracing.py
adapters/orchestration/: __init__.py  mcp_bridge.py  mcp_client.py
alembic/: env.py
apps/: README.md
archive-docs/: README.md
archive-prompts/: README.md
cli/: __init__.py  main.py
cloudflared/: config.dev.yml  config.prompts.yml  config.yml
content/: README.md
core/: README.md
data/: README.md
docs/: ADAPTIVE_RETRIEVAL.md  ADDING_NEW_PROJECTS.md  AISMR_PLAN.md  ARCHITECTURE.md  ASYNC_PATTERNS.md  CHANGELOG-LEVEL.md  CURSOR_MCP_SETUP.md  DATABASE_RESET.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  EPISODIC_MEMORY_DESIGN.md  HITL-TELEGRAM.md  LIGHTHOUSE_PLAN.md  LLAMA_STACK.md  LOCAL-DEVELOPMENT.md  MCP_INTEGRATION.md  MCP_PROMPT_NOTES.md  MCP_TOOLS.md  MEMORY_ARCHITECTURE.md  MEMORY_GRAPH_DESIGN.md  MYLOWARE_MCP_TOOLS_TEST_REPORT.md  N8N_MCP_AUTH_FIX.md  NORTH_STAR.md  OBSERVABILITY.md  PLAN.md  PROMPTS.md  PROMPT_ALIGNMENT_PLAN.md  PROMPT_ARCHITECTURE_V2.md  PROMPT_REWRITE_SUMMARY.md  PROMPT_STATUS_SUMMARY.md  PROMPT_TRANSFORMATION_PLAN_V2.md  PROMPT_WORK_SUMMARY.md  QUICKSTART.md  RAG_BOOTSTRAP_GAPS.md  RAG_SYSTEM_ANALYSIS_AND_IMPROVEMENTS.md  README.md  REVIEW.md  ROADMAP.md  RUNBOOK.md  (+38 more)
drizzle/: 0000_initial_schema.sql  0001_allow_null_project_id.sql  0001_initial.sql  0001_mighty_layla_miller.sql  0002_add_fulltext_search.sql  0002_add_trace_id_index.sql  0002_lyrical_triton.sql  0003_absent_marvel_boy.sql  0003_add_memory_components.sql  0004_add_episodic_memory.sql  0004_trace_metadata_index.sql  0005_add_memory_graph.sql  0005_add_owner_workflow.sql  0006_drop_legacy_orchestration.sql  0007_drop_workflow_registry.sql  0008_job_ledger.sql  0009_persona_allowed_tools.sql  0010_project_workflow_singular.sql
drizzle-operations/: 0001_initial_operations.sql  0002_extend_run_status.sql  0002_fix_user_idea_type.sql  0003_add_hitl_tables.sql  0004_project_id_slug.sql
infra/: docker-compose.yml
infrastructure/: README.md  circuit_breaker.py  retry.py
interfaces/: README.md
llama_stack/: fly.toml  run-milvus.yaml  run.yaml
mcp-prompts/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
notebooks/: 01_quickstart.ipynb  02_custom_agent.ipynb  03_rag_knowledge.ipynb  04_observability.ipynb
prisma/: schema.prisma  seed.ts
prompts/: PROMPT_UPDATES.md  README.md  ideagenerator-aismr.json  ideagenerator-aismr.md  persona-captionhashtag.json  persona-captionhashtag.md  persona-chat.json  persona-chat.md  persona-ideagenerator.json  persona-ideagenerator.md  persona-screenwriter.json  persona-screenwriter.md  project-aismr.json  project-aismr.md  screenwriter-aismr.json  screenwriter-aismr.md
remotion-service/: Dockerfile  package-lock.json  package.json  render.mjs  tsconfig.json
schemas/: README.md  aismr-idea-output.schema.json  aismr-screenplay-output.schema.json
scripts/: README.md  agent-completion-handler.js  archiveAismrVideos.ts  backfillRunsToEpisodic.ts  build-prompts-sql.js  check-deprecated-tools.ts  checkServices.ts  clear-n8n-workflows.ts  database-setup.md  db-utils.ts  demo_smoke.sh  dev-down.sh  dev-logs.sh  dev-reset-export.js  dev-reset.sh  dev-setup.sh  dev-status.sh  dev-up.sh  docker-entrypoint.sh  e2e_local.py  extractSchemas.ts  formatWorkflows.ts  generateWorkflowTemplates.ts  generate_openapi.py  hitl-notify.js  import-workflows.ts  ingestPrompts.ts  init-db.sql  injectSchemas.ts  manageComposeStack.ts  manageDevStack.ts  migrateMemoryTypes.ts  mw.ts  n8n-sync.js  n8nSync.ts  notify-completion.js  notify-completion.sh  preDev.ts  register-workflow-mappings.ts  repo_scan.sh  (+29 more)
sql/: dev-reset.sql  prompts-inserts.sql
src/: __init__.py  app_version.py  client.py  llama_clients.py  server.ts
temporal-config/: development-sql.yaml
tests/: __init__.py  conftest.py  tsconfig.json
v2/: .env.example  .gitignore  CODING_STANDARDS.md  Dockerfile  NORTH_STAR.md  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  review-merged.md  tsconfig.json
workflows/: AISMR.workflow.json  AISMR_SCHEMAS.md  README.md  agent.workflow.json  aismr.workflow.archive.json  alex.workflow.json  casey.workflow.json  chat.workflow.json  edit-aismr.workflow.json  error-handler.workflow.json  generate-ideas.workflow.json  generate-video.workflow.json  hitl-temp.workflow.json  idea-generator-v2.workflow.json  idea-generator.workflow.json  iggy.workflow.json  load-persona.workflow.json  mcp-health-check.workflow.json  mylo-mcp-bot.workflow.json  myloware-agent.workflow.json  poll-db.workflow.json  quinn.workflow.json  riley.workflow.json  screen-writer.workflow.json  upload-file-to-google-drive.workflow.json  upload-to-tiktok.workflow.json  veo.workflow.json  workflow-map.json
(+1520 files in other folders)
