[project]
name = "myloware"
version = "0.1.0"
description = "Llama Stack multi-agent video production platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "MyloWare Team"}
]
keywords = ["llama-stack", "multi-agent", "video-production", "ai"]

dependencies = [
    # Llama Stack - REQUIRED
    "llama-stack-client>=0.3.4",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # HTTP client
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "fire>=0.5.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Caching and rate limiting
    "cachetools>=5.3.0",
    "slowapi>=0.1.9",

    # Observability
    "langfuse>=2.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "hypothesis>=6.92.0",
]

[project.scripts]
myloware = "cli.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "agents",
    "agents.tools",
    "api",
    "api.routes",
    "cli",
    "config",
    "knowledge",
    "memory",
    "notifications",
    "observability",
    "storage",
    "tools",
    "tools.fakes",
    "workflows",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["archive"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too noisy with external libs
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]
# Disable errors for known patterns in external libs
disable_error_code = [
    "no-any-return",  # Many libs return Any
    "valid-type",     # SQLAlchemy Base pattern
    "misc",           # SQLAlchemy declarative base
    "var-annotated",  # SQLAlchemy columns
    "attr-defined",   # External lib API changes
    "arg-type",       # External lib type stubs incomplete
    "union-attr",     # Union type handling
    "override",       # Base class signature mismatches
    "return-value",   # SQLAlchemy property patterns
    "assignment",     # SQLAlchemy column patterns
]

[[tool.mypy.overrides]]
module = "llama_stack_client.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # Allow assert statements
