[project]
name = "myloware"
version = "0.1.0"
description = "Llama Stack multi-agent video production platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    {name = "MyloWare Team"}
]
keywords = ["llama-stack", "multi-agent", "video-production", "ai"]

dependencies = [
    # Llama Stack - REQUIRED
    "llama-stack-client>=0.3.4",

    # LangGraph - Workflow orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver for async routes

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.0",

    # Async runtime
    "anyio>=4.0.0",

    # SQLite async driver (used for local demo + tests)
    "aiosqlite>=0.20.0",

    # HTTP client
    "httpx>=0.26.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Caching and rate limiting
    "cachetools>=5.3.0",
    "slowapi>=0.1.9",

    # Observability (Llama Stack native - OpenTelemetry)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "structlog>=24.0.0",

    # Ops / metrics
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.0.0",

    # External providers
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "hypothesis>=6.92.0",
    "bandit>=1.7.8",
    "pre-commit>=3.0.0",
]
s3 = [
    "boto3>=1.34.0",
]

[project.scripts]
myloware = "myloware.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["myloware*"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["archive"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "parity: production-parity tests (opt-in; may require Postgres)",
    "live: live-provider tests (manual; may incur costs)",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.13"
warn_return_any = false  # Too noisy with external libs
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]
# Disable errors for known patterns in external libs
disable_error_code = [
    "no-any-return",  # Many libs return Any
    "valid-type",     # SQLAlchemy Base pattern
    "misc",           # SQLAlchemy declarative base
    "var-annotated",  # SQLAlchemy columns
    "attr-defined",   # External lib API changes
    "arg-type",       # External lib type stubs incomplete
    "union-attr",     # Union type handling
    "override",       # Base class signature mismatches
    "return-value",   # SQLAlchemy property patterns
    "assignment",     # SQLAlchemy column patterns
]

[[tool.mypy.overrides]]
module = "llama_stack_client.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_errors = true

# Stricter checks for core business logic
[[tool.mypy.overrides]]
module = ["myloware.workflows.*", "myloware.tools.*"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # Allow assert statements
